# Jib

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PARITY.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: cli.rs  common.rs  lib.rs  main.rs  registry.rs  usage.rs
src/applets/: awk.rs  base64.rs  basename.rs  bools.rs  cat.rs  chmod.rs  cmp.rs  column.rs  comm.rs  cp.rs  cut.rs  date.rs  dd.rs  df.rs  diff.rs  dig.rs  dirname.rs  du.rs  echo.rs  env_.rs  expand.rs  find.rs  fmt.rs  fold.rs  getopt.rs  grep.rs  groups.rs  gzip_.rs  hashsum.rs  head.rs  hexdump.rs  hostname_.rs  http.rs  id.rs  join.rs  jq.rs  ln.rs  ls.rs  mkdir.rs  mktemp.rs  (+33 more)
tests/: integration.rs
tests/parity/: run.py
